define the color scheme

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -24,11 +24,18 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #DB6C60;
 
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #DB6C60;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+$gray: #484848;
+
+$darker-grey: #484848;
+$dark-grey: #767676;
+$light-grey: #EFF5FF;
+$blue: #91B5C9;
+$light-blue: #D2E1F2;
+$lighter-blue: #E7F0FF;
+
