--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -9,4 +9,7 @@
 
 <% if user_signed_in? %>
   <%= link_to "my profile", user_path(current_user) %>
+  <%= link_to "sign out", destroy_user_session_path, method: :delete%>
+<% else %>
+  <%= link_to "sign in", new_user_registration_path %>
 <% end %>
