--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a new recipe</h1>
-<%= simple_form_for @precipe do |f| %>
-  <%= f.error_messages %>
+<%= simple_form_for @recipe do |f| %>
+  <%= f.error_notification %>
   <%= f.input :title, :hint => "give us a price" %>
   <%= f.input :cooking_time, :hint => "prices should be in USD" %>
   <%= f.input :description, :hint => "tell us where its from" %>
