--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <li>Placeholder</li>
   <% @recipes.each do |recipe|%>
-    <li> <%= recipe.name %></li>
+    <li> <%= recipe.title %> <%= link_to "show more", recipe_path(recipe) %></li>
   <% end %>
 </ul>
 
