--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,3 +5,9 @@
 
 <%= link_to "delete this recipe", recipe_path(@recipe), method: :delete %>
 <%= link_to "home page", recipes_path %>
+
+<% if @recipe.user_id != current_user.id %>
+  <%= link_to "buy this recipe and add it to my cookbook",  %>
+<% else %>
+
+<% end %>
