fixed bug with facebook url picture, insert if statement to display different options when signed out and when signed in

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,3 +1,13 @@
+/* Adjustments */
+.navbar-default {
+  background: white;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+}
+
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -9,6 +19,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 
 /* Optional class to fix the navbar on top */
 .navbar-wagon-fixed {
@@ -33,7 +44,7 @@
 
 /* Navbar item */
 .navbar-wagon-item {
-  flex: 0 1 auto;
+  flex: 1 0 auto;
   cursor: pointer;
   padding: 0 20px;
 }
@@ -41,11 +52,13 @@
 /* Navbar standard link */
 .navbar-wagon-link {
   color: #616668;
-  font-size: 14px;
+  font-size: 16px;
+  color: black;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
   text-decoration: none;
+  color: $red;
 }
 
 /* Navbar right button */
