--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
   </a>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <div class="navbar-wagon-right">
 
     <!-- Search form -->
     <form action="" class="navbar-wagon-search">
@@ -16,12 +16,10 @@
     </form>
 
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Sign In</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Sign Up</a>
 
     <!-- Profile picture and dropdown -->
     <% if user_signed_in? %>
-      <a href="" class="navbar-wagon-item navbar-wagon-link">My Cookbook</a>
+      <%= link_to "My Cookbook", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Text link -->
       <a href="" class="navbar-wagon-item navbar-wagon-link">Create Recipe</a>
@@ -30,23 +28,14 @@
           <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
           <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete%></li>
+            <li><%= link_to "Sign in", new_user_registration_path %></li>
           </ul>
         </div>
       </div>
+    <% else %>
+      <a href="" class="navbar-wagon-item navbar-wagon-link">Sign In</a>
+      <a href="" class="navbar-wagon-item navbar-wagon-link">Sign Up</a>
     <% end %>
-  </div>
-
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
-      </ul>
-    </div>
   </div>
 </div>
