--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,5 +10,5 @@
   <%= link_to "my profile", user_path(current_user) %>
   <%= link_to "sign out", destroy_user_session_path, method: :delete%>
 <% else %>
-  <%= link_to "sign in", new_user_registration_path %>
+  <%= link_to "sign in", new_user_session_path %>
 <% end %>
