--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,14 +28,14 @@
           <% avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
           <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete%></li>
-            <li><%= link_to "Sign in", new_user_registration_path %></li>
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete%></li>
           </ul>
         </div>
       </div>
     <% else %>
-      <a href="" class="navbar-wagon-item navbar-wagon-link">Sign In</a>
-      <a href="" class="navbar-wagon-item navbar-wagon-link">Sign Up</a>
+    <%= link_to "Sign in", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
 </div>
