--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   <%= render 'shared/navbar' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-  <%= yield %>
+    <div class="container padded-bottom">
+    <%= yield %>
+    </div>
   </div>
   <%= render 'shared/footer' %>
   <%= javascript_include_tag 'application' %>
