--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,39 +3,20 @@
     <div class="footer" id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-                    <h3> About </h3>
-                    <ul>
-                        <li> <a href="#"> History </a> </li>
-                        <li> <a href="#"> Staff </a> </li>
-                    </ul>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-                    <h3> Contact </h3>
-                    <ul>
-                        <li> <a href="#"> E-mail </a> </li>
-                        <li> <a href="#"> Phone </a> </li>
-                    </ul>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                    <h3> Newsletter </h3>
-                    <ul>
-                        <li>
-                            <div class="input-append newsletter-box text-center">
-                                <input type="text" class="full text-center" placeholder="email ">
-                                <button class="btn  bg-gray" type="button"> Subscribe <i class="fa fa-long-arrow-right"> </i> </button>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul class="social">
-                        <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
-                    </ul>
-                </div>
-            </div>
+              <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+                  <h3> About </h3>
+                  <ul>
+                      <li> <a href="#"> History </a> </li>
+                      <li> <a href="#"> Staff </a> </li>
+                  </ul>
+              </div>
+              <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
+                <h3> Contact Us </h3>
+                <ul class="social">
+                    <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                    <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                </ul>
+              </div>
         </div>
     </div>
 </footer>
