--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: $lighter-blue;
+  background:  $lighter-blue;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -27,7 +27,6 @@
     &:hover {
     color: $brand-color;
     text-decoration: none;
-    border: 2px solid $brand-color;
     }
 }
 
@@ -51,10 +50,10 @@
 /* Navbar standard link */
 .navbar-wagon-link {
   font-size: 16px;
-  color: $red;
+  color: $darker-grey;
 }
 .navbar-wagon-link:hover {
-  color: $orange;
+  color: black;
   text-decoration: none;
 }
 /* Navbar search form */
