--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -66,7 +66,7 @@
 }
 .navbar-wagon-search-btn {
   line-height: 40px;
-  color: $lighter-blue;
+  color: $dark-grey;
   border: none;
   background: transparent;
   position: absolute;
