--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -18,7 +18,10 @@
   border: 3px solid white;
   margin-top: 15px;
   z-index: 3;
-  position: relative;
+  position: absolute;
+  margin: auto;
+  left: 150px;
+  bottom: -33px;
 }
 .card-flexbox {
   display: flex;
@@ -35,6 +38,7 @@
   padding: 5px;
   border-radius: 5px;
 }
+
 .card-difficulty {
   position: absolute;
   bottom: 10px;
@@ -44,6 +48,15 @@
   font-weight: bolder;
   padding: 5px;
   border-radius: 5px;
+}
+
+.star-rating {
+  font-size: 30px;
+  position: absolute;
+  bottom: 20px;
+  right: 70px;
+  margin: auto;
+  right: 83px;
 }
 .card-description h3 {
   position: absolute;
