add a small validation for the photos

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
 <div class="container my-recipes">
   <h2>My Recipes</h2>
   <div class="content-container">
-    <%= render "shared/card_create" %>
+    <%= render "shared/card_create", user: @user %>
  </div>
 </div>
 <br>
