--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,15 +1,15 @@
 <h1>Create a new recipe</h1>
 <%= simple_form_for @recipe do |f| %>
   <%= f.error_notification %>
-  <%= f.input :title, :hint => "Define the title" %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
-  <%= f.input :price, :hint => "give us a price (GBP)" %>
-  <%= f.input :cooking_time, :hint => "cooking time (minutes)" %>
-  <%= f.input :description, :hint => "tell us where its from, the story behind" %>
-  <%= f.input :instructions, :hint => "tell us how to do it step by step" %>
-  <%= f.input :difficulty, :hint => "tell us how difficlt it is"  %>
-  <%= f.input :cuisine_type, :hint => "french, italian, else"%>
+  <%= f.input :title, :hint => "Define the title" , required: true%>
+  <%= f.input :photo , required: true%>
+  <%= f.input :photo_cache, as: :hidden , required: true%>
+  <%= f.input :price, :hint => "give us a price (GBP)" , required: true%>
+  <%= f.input :cooking_time, :hint => "cooking time (minutes)" , required: true%>
+  <%= f.input :description, :hint => "tell us where its from, the story behind" , required: true%>
+  <%= f.input :instructions, :hint => "tell us how to do it step by step" , required: true%>
+  <%= f.input :difficulty, :hint => "tell us how difficlt it is"  , required: true%>
+  <%= f.input :cuisine_type, :hint => "french, italian, else", required: true%>
   <%= f.button :submit %>
 <% end %>
 
