--- a/app/views/shared/_card_create.html.erb
+++ b/app/views/shared/_card_create.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <% @user.recipes.each do |recipe| %>
+  <% user.recipes.each do |recipe| %>
     <div class="col-xs-4">
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0) 30%, rgba(0,0,0,3)), url('<%= cl_image_path recipe.photo, height: 300, width: 400, crop: :fill %>');">
       <div class="card-category"><i class="fa fa-clock-o" aria-hidden="true"></i>
