--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,38 +4,27 @@
   </div>
 </div>
 
-<div class="container">
-  <% avatar_url = current_user.facebook_picture_url || current_user.photo.url(:square) || "http://placehold.it/30x30" %>
-  <%= cl_image_tag avatar_url, class: "avatar" %>
-  <h3><%= @user.fullname %></h3>
-</div>
-<br>
-<div class="container">
-  <h2>My Recipes</h2>
-  <%= link_to "ADD A NEW RECIPE", new_recipe_path %>
-  <div class="content-container">
-    <% @user.recipes.each do |recipe| %>
-      <div class="row">
-        <div class="col-xs-4">
-          <p><%= recipe.title %></p>
-        </div>
-      </div>
-    <% end  %>
+
+<div class="container user-profile text-center">
+  <div id="avatar_position" >
+    <% avatar_url = @user.facebook_picture_url || @user.photo.url(:square) || "http://placehold.it/30x30" %>
+    <%= cl_image_tag avatar_url, class: "avatar-large  text-center" %>
   </div>
+  <h3><%= @user.first_name + " " + @user.last_name %></h3>
 </div>
 <br>
-<div class="container">
+<div class="container my-recipes">
+  <h2>My Recipes</h2>
+  <div class="content-container">
+    <%= render "shared/card_create", user: @user %>
+ </div>
+</div>
+<br>
+<div class="container bought-recipe">
   <h2>Purchased Recipes</h2>
   <%= link_to "BUY A NEW RECIPE", recipes_path %>
     <div class="content-container">
-      <% @user.transactions.each do |transaction|  %>
-        <% recipe = Recipe.find(transaction.recipe_id)%>
-          <div class="row">
-            <div class="col-xs-4">
-              <p>recipe.title</p>
-            </div>
-          </div>
-      <% end  %>
+      <%= render "shared/card_bought" %>
     </div>
 </div>
 
