--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,4 @@
 .card {
-  width: 350px;
   height: 250px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
@@ -18,10 +17,9 @@
   border: 3px solid white;
   margin-top: 15px;
   z-index: 3;
-  position: absolute;
+  position: relative;
   margin: auto;
-  left: 150px;
-  bottom: -33px;
+  bottom: 0px;
 }
 .card-flexbox {
   display: flex;
@@ -51,12 +49,7 @@
 }
 
 .star-rating {
-  font-size: 30px;
-  position: absolute;
-  bottom: 20px;
-  right: 70px;
-  margin: auto;
-  right: 83px;
+  font-size: 20px;
 }
 .card-description h3 {
   position: absolute;
