user-banner-user-picture

--- a/app/assets/stylesheets/pages/_show_user.scss
+++ b/app/assets/stylesheets/pages/_show_user.scss
@@ -29,6 +29,11 @@
   justify-content: center
 }
 
+#user-banner {
+  background-size: cover;
+  background-position: center;
+}
+
 
 
 .add-card :hover {
