--- a/app/views/shared/_card_bought.html.erb
+++ b/app/views/shared/_card_bought.html.erb
@@ -21,7 +21,8 @@
             </div>
           </div>
           <a class="card-link" href="#" ></a>
-          <% avatar_url = current_user.facebook_picture_url || current_user.photo.url(:square) || "http://placehold.it/30x30" %>
+          <% owner = User.find(recipe.user_id)  %>
+          <% avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "http://placehold.it/30x30" %>
           <%= cl_image_tag avatar_url, class: "card-user avatar" %>
           </div>
         </div>
