--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,17 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://placehold.it/500x1000');">
+
+<% if recipe = @user.recipes.last%>
+<div class="banner" id="user-banner" style="background-image: url('<%= cl_image_path recipe.photo, height: 300, width: 400, crop: :fill %>');">
   <div class="banner-content">
     <%= link_to "Edit", edit_user_registration_path %>
   </div>
 </div>
+<% else %>
+<div class="banner" id="user-banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://static.pexels.com/photos/77586/night-77586.jpeg');">
+  <div class="banner-content">
+    <%= link_to "Edit", edit_user_registration_path %>
+  </div>
+</div>
+<% end %>
 
 
 <div class="container user-profile text-center">
