--- a/app/views/shared/_card_bought.html.erb
+++ b/app/views/shared/_card_bought.html.erb
@@ -2,7 +2,7 @@
       <% @user.transactions.each do |transaction|  %>
       <% recipe = Recipe.find(transaction.recipe_id)%>
         <%= link_to recipe_path(recipe) do%>
-        <div class="col-xs-4">
+        <div class="col-xs-12 col-sm-6">
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0) 30%, rgba(0,0,0,3)), url('<%= cl_image_path recipe.photo, height: 300, width: 400, crop: :fill %>');">
           <div class="card-category"><i class="fa fa-clock-o" aria-hidden="true"></i>
           <%= recipe.cooking_time %> MINS</div>
@@ -20,16 +20,17 @@
               <i class="fa fa-star" aria-hidden="true"></i>
               <i class="fa fa-star" aria-hidden="true"></i>
             </div>
-          </div>
-          <a class="card-link" href="#" ></a>
           <% owner = User.find(recipe.user_id)  %>
           <% avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "http://placehold.it/30x30" %>
           <%= cl_image_tag avatar_url, class: "card-user avatar" %>
           </div>
+          </div>
         </div>
         <% end %>
       <% end  %>
-      <div class="col-xs-4">
+
+
+      <div class="col-xs-12 col-sm-6">
           <%= link_to recipes_path, class: "card add-card btn" do%>
             <h3>Buy another recipe</h3>
           <% end %>
