--- a/app/views/shared/_card_create.html.erb
+++ b/app/views/shared/_card_create.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <% user.recipes.each do |recipe| %>
-    <div class="col-xs-4">
+    <div class="col-xs-12 col-sm-6">
       <%= link_to recipe_path(recipe) do%>
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0) 30%, rgba(0,0,0,3)), url('<%= cl_image_path recipe.photo, height: 300, width: 400, crop: :fill %>');">
       <div class="card-category"><i class="fa fa-clock-o" aria-hidden="true"></i>
@@ -18,14 +18,14 @@
           <i class="fa fa-star" aria-hidden="true"></i>
           <i class="fa fa-star" aria-hidden="true"></i>
         </div>
-      </div>
          <% avatar_url = current_user.facebook_picture_url || current_user.photo.url(:square) || "http://placehold.it/30x30" %>
       <%= cl_image_tag avatar_url, class: "card-user avatar" %>
+      </div>
       </div>
       <% end %>
     </div>
   <% end  %>
-  <div class="col-xs-4">
+  <div class="col-xs-12 col-sm-6">
       <%= link_to new_recipe_path, class: "card add-card btn" do%>
         <h3>Add a new recipe</h3>
       <% end %>
