--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -58,13 +58,14 @@
       <h4>July 2017</h4>
     </div>
     <%= link_to "delete this recipe", recipe_path(@recipe), method: :delete %>
-  <% elsif @status_current_user%>
+  <% elsif @status_current_user%> <!-- Test if the user bougth this recipe -->
     <div class="recipe-instructions">
       <h2>Method</h2>
       <p><%= @recipe.instructions %></p>
     </div>
 
     <div class="recipe-reviews">
+      <p><%= @transaction.id %> TRANSACTION</p>
       <h2>Customer Reviews</h2>
         <i class="fa fa-star" aria-hidden="true"></i>
         <i class="fa fa-star" aria-hidden="true"></i>
