--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <div class="wrapper">
   <%= render 'shared/flashes' %>
   <%= render 'shared/navbar' %>
-    <div class="container padded-bottom">
+    <div class="jumbotron padded-bottom">
     <%= yield %>
     </div>
   </div>
