--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,12 +1,15 @@
-<div class="container">
   <div class="row">
     <% @recipes.each do |recipe|%>
-      <div class="col-xs-12 col-sm-6">
-         <%= render "shared/card", recipe: recipe %>
-      </div>
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
+        <% if @recipes != nil %>
+          <%= render "shared/card", recipe: recipe %>
+        <% else %>
+          <h3> There are no recipes yet</h3>
+        <% end %>
+    </div>
     <% end %>
   </div>
-</div>
+
 
 <% if @recipes.blank? %>
   <h4>There are no recipes containing the term <%= params[:search] %>.</h4>
