--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -13,70 +13,71 @@
     </div>
   </div>
 </div>
+<div class="container padded-bottom">
+  <div class="container-recipe-page">
 
-<div class="container-recipe-page">
-
-  <div class="flex-recipe-details">
-    <div class="recipe-description">
-      <p>"<%= @recipe.description %>"</p>
-    </div>
-    <div class="cooking-details">
-      <h3><i class="fa fa-cutlery" aria-hidden="true"></i> <%= @recipe.difficulty.upcase%></h3>
-      <h3><i class="fa fa-clock-o" aria-hidden="true"></i> <%= @recipe.cooking_time %> MINS</h3>
-    </div>
-    <% owner = User.find(@recipe.user_id) %>
-    <%= link_to user_path(owner) do %>
-      <div class="recipe-avatar">
-
-        <% owner_avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "http://placehold.it/30x30" %>
-        <%= image_tag owner_avatar_url, class: "avatar"%>
-        <p class="text-center"><%= owner.first_name %> <br> <%= owner.last_name %></p>
+    <div class="flex-recipe-details">
+      <div class="recipe-description">
+        <p>"<%= @recipe.description %>"</p>
       </div>
-    <% end %>
+      <div class="cooking-details">
+        <h3><i class="fa fa-cutlery" aria-hidden="true"></i> <%= @recipe.difficulty.upcase%></h3>
+        <h3><i class="fa fa-clock-o" aria-hidden="true"></i> <%= @recipe.cooking_time %> MINS</h3>
+      </div>
+      <% owner = User.find(@recipe.user_id) %>
+      <%= link_to user_path(owner) do %>
+        <div class="recipe-avatar">
+
+          <% owner_avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "http://placehold.it/30x30" %>
+          <%= image_tag owner_avatar_url, class: "avatar"%>
+          <p class="text-center"><%= owner.first_name %> <br> <%= owner.last_name %></p>
+        </div>
+      <% end %>
+    </div>
+
+
+
   </div>
 
+  <% if user_signed_in? %>
+    <% if @recipe.user_id == current_user.id %>
+      <div class="recipe-instructions">
+        <h2>Method</h2>
+        <p><%= @recipe.instructions %></p>
+      </div>
 
+      <div class="recipe-reviews">
+        <h2>Customer Reviews</h2>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        <p>"This was the best food I've ever tasted, and so simple to cook as well! Highly recommended"</p>
+        <h3>Bart</h3>
+        <h4>July 2017</h4>
+      </div>
+      <%= link_to "delete this recipe", recipe_path(@recipe), method: :delete %>
+    <% elsif @status_current_user%>
+      <div class="recipe-instructions">
+        <h2>Method</h2>
+        <p><%= @recipe.instructions %></p>
+      </div>
 
-</div>
+      <div class="recipe-reviews">
+        <h2>Customer Reviews</h2>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        <p>"This was the best food I've ever tasted, and so simple to cook as well! Highly recommended"</p>
+        <h3>Bart</h3>
+        <h4>July 2017</h4>
+      </div>
+    <% else %>
 
-<% if user_signed_in? %>
-  <% if @recipe.user_id == current_user.id %>
-    <div class="recipe-instructions">
-      <h2>Method</h2>
-      <p><%= @recipe.instructions %></p>
-    </div>
-
-    <div class="recipe-reviews">
-      <h2>Customer Reviews</h2>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-      <p>"This was the best food I've ever tasted, and so simple to cook as well! Highly recommended"</p>
-      <h3>Bart</h3>
-      <h4>July 2017</h4>
-    </div>
-    <%= link_to "delete this recipe", recipe_path(@recipe), method: :delete %>
-  <% elsif @status_current_user%>
-    <div class="recipe-instructions">
-      <h2>Method</h2>
-      <p><%= @recipe.instructions %></p>
-    </div>
-
-    <div class="recipe-reviews">
-      <h2>Customer Reviews</h2>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-        <i class="fa fa-star" aria-hidden="true"></i>
-      <p>"This was the best food I've ever tasted, and so simple to cook as well! Highly recommended"</p>
-      <h3>Bart</h3>
-      <h4>July 2017</h4>
-    </div>
-  <% else %>
-
-    <%= render 'transactions/form', recipe: @recipe, transaction: @transaction %>
+      <%= render 'transactions/form', recipe: @recipe, transaction: @transaction %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
