created nav bar buttons

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -40,4 +40,5 @@ $light-blue: #D2E1F2;
 $lighter-blue: #E7F0FF;
 $baby-powder: #FEFFFC;
 $grey: #f3f3f3;
-$black: #000000
+$black: #000000;
+$btn-green: #3b9792;
