--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -4,9 +4,15 @@
   background:  white;
   transition: all 0.3s ease;
   display: flex;
-  height: 70px;
+  height: 50px;
   padding: 0px 30px;
   align-items: center;
+  position: fixed;
+  width: 100%;
+}
+
+.single-icon {
+  font-weight: bolder;
 }
 
 .search-box-icon {
@@ -40,7 +46,6 @@
 .navbar-wagon-brand {
   color: $darker-grey;
   font-size: 36px;
-  font-weight: bolder;
     &:hover {
     color: $black;
     text-decoration: none;
@@ -69,10 +74,11 @@
 .navbar-wagon-link {
   font-family: Raleway,Roboto,Helvetica Neue,Segoe UI,sans-serif;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 15px;
   padding: 3px;
   color: black;
   margin-left: 10px;
+  border-bottom: 2px solid transparent;
     &:hover {
     text-decoration: none;
     color: black;
