--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -9,13 +9,13 @@
   border: white 1px solid;
 }
 .avatar-bordered {
-  width: 30px;
+  width: 50px;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+  border: white 2px solid;
 }
 .avatar-square {
-  width: 30px;
+  width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
