--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,8 @@
+<div class="container-fluid padded-bottom recipe-index-container">
+<h1 class="text-center">All recipes</h1>
   <div class="row">
     <% @recipes.each do |recipe|%>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 recipe-cards">
         <% if @recipes != nil %>
           <%= render "shared/card", recipe: recipe %>
         <% else %>
@@ -9,6 +11,7 @@
     </div>
     <% end %>
   </div>
+</div>
 
 
 <% if @recipes.blank? %>
